[package]
name = "input-rs"
version = "0.2.2"
edition = "2021"
rust-version = "1.79"
description = "A feature-rich, accessible, highly customizable, functional, reusable input component for Wasm Frameworks."
license = "Apache-2.0"
keywords = ["input", "yew", "dioxus", "leptos", "input-rs"]
categories = ["web-programming", "science"]
repository = "https://github.com/opensass/input-rs"
documentation = "https://docs.rs/input-rs/"
authors = ["Mahmoud Harmouch <oss@wiseai.dev>"]
exclude = ["assets", "examples"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web-sys = { version = "0.3", default-features = false }
yew = { version = "0.21.0", default-features = false, optional = true }
dioxus = { version = "0.5", optional = true }

[dev-dependencies]
bump2version = "0.1.4"
regex = "1.10.2"
serde = { version = "1.0.193", features = ["derive"] }

[features]
yew = ["dep:yew", ]
dio = ["dioxus", ]

[profile.release]
opt-level = "z"
debug = false
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
incremental = false

[badges]
maintenance = { status = "actively-developed" }
